force-app/main/default/objects/SQX_Part__c/SQX_Part__c.object-meta.xml
<CustomObject>
    <description>It represents individual parts imported from an external database via a REST API.</description>
    <label>CQ Part</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQ Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>