force-app/main/default/objects/SQX_Part__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field indicating whether the part is currently active or inactive.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>