force-app/main/default/objects/SQX_Part__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field associating the part with an account based on specific criteria.</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CQ Parts</relationshipLabel>
    <relationshipName>CQ_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>